ix thread loading issue and update .gitignore

--- a/package.json
+++ b/package.json
@@ -7,22 +7,40 @@
     "build": "tsc",
     "dev": "ts-node-dev --respawn src/index.ts",
     "analyze": "ts-node src/analyze.ts",
-    "court-doc": "ts-node src/generate-court-doc.ts"
+    "court-doc": "ts-node src/generate-court-doc.ts",
+    "server": "ts-node src/server.ts",
+    "client": "cd client && npm start",
+    "client:build": "cd client && npm run build",
+    "client:install": "cd client && npm install",
+    "ui": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "base-64": "^1.0.0",
+    "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "googleapis": "^149.0.0",
     "open": "^10.1.2",
     "openai": "^4.104.0",
     "puppeteer": "^24.10.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "utf8": "^3.0.0",
@@ -33,6 +51,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/utf8": "^3.0.3",
     "@types/yargs": "^17.0.32",
+    "concurrently": "^9.1.2",
     "ts-node-dev": "^2.0.0"
   }
 }
