Add support for searching gmail API and processing emails

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 CLIENT_ID=your_client_id
 CLIENT_SECRET=your_client_secret
 
+# Development options
+PORT=3001
+MOCK_GMAIL_API=false  # Set to 'true' if you want to use mock data instead of real Gmail API
+MANUAL_AUTH=false     # Set to 'true' if you prefer the manual authentication flow
+
 # Gmail filter settings
 FILTER_SENDER=
 FILTER_FROM_DATE=
