--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
+    "@mui/x-date-pickers": "^5.0.0-beta.7",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.9",
+    "date-fns": "^2.28.0",
     "marked": "^5.0.2",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.1",
@@ -18,6 +22,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^29.5.1",
     "@types/marked": "^5.0.0",
     "@types/node": "^20.1.3",
