--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "googleapis": "^149.0.0",
     "open": "^10.1.2",
     "openai": "^4.104.0",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "^24.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -50,6 +51,7 @@
     "@types/base-64": "^1.0.2",
     "@types/fs-extra": "^11.0.4",
     "@types/utf8": "^3.0.3",
+    "@types/uuid": "^10.0.0",
     "@types/yargs": "^17.0.32",
     "concurrently": "^9.1.2",
     "ts-node-dev": "^2.0.0"
